--- a/main.css
+++ b/main.css
@@ -217,7 +217,7 @@
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(56, 31, 31, 0.11);
 }
 .panel-2ZFCRb:hover .gameWrapper-2TFy7F {
-  margin-left: 5;
+  margin-left: 20px;
 }
 .panel-2ZFCRb:hover .info-88fTUI, .panel-2ZFCRb:hover .actions-zk2vB_ {
   opacity: 1;
